# python-template-docker

./: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.cpu.txt  requirements.gpu.txt  test_environment.py
