[project]
name = "python-docker-uv"
version = "0.1.0"
description = "Python Docker environment with UV package manager"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

ml-cpu = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]

ml-gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

data = [
    "polars>=0.19.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
]

[tool.uv]
# UVの設定
dev-dependencies = [
    "ipykernel>=6.0.0",
]

[tool.ruff]
# Ruffの設定
line-length = 88
target-version = "py311"

[tool.black]
# Blackの設定
line-length = 88
target-version = ["py311"]

[tool.mypy]
# Mypyの設定
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true